--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -48,7 +48,7 @@
                 });
               %div.input{ style: "margin-left: 0px; " }
                 %input#answer_input{ type: "text", name: "answer", style: "width: 250px;", placeholder: "Copy & paste link to image URL here...", autofocus: "autofocus" }
-                %a#answer_preview_button.btn.secondary Preview
+                %a#answer_preview_button.btn.secondary{style:"position:relative; bottom:5px;"} Preview
                 %p{ style: "margin:4px; line-height:18px; font-size: 13px;"} or #{file_field_tag("obj")}
                 %p{ style: "font-style:italic;" } *Points awarded by votes
                 %div#answer_preview_container{ style: "padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
