fix image preview button on yt upload

--- a/app/views/sections/take.html.haml
+++ b/app/views/sections/take.html.haml
@@ -71,7 +71,7 @@
                 });
               %div.input{ style: "margin-left: 0px; " }
                 %input#answer_input{ type: "text", name: "answer", style: "width: 250px;", placeholder: "Copy & paste link to youtube video here...", autofocus: "autofocus" }
-                %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px;" } Preview
+                %a#answer_preview_button.btn.secondary{ style: "margin-left: 10px; position:relative; bottom:5px;" } Preview
                 %p{ style: "font-style:italic;" } *Points awarded by votes
                 %div#answer_preview_container{ style: "text-align: center;padding: 10px; margin: 20px 0 0 0; border: 1px solid lightgray;" }
                   %div#answer_preview
