--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -14,6 +14,7 @@
         $(this).parent().remove(); 
       });
       init_voting();
+      init_comments();
     });
 
 - newsfeed_items.each do |r|
