--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -13,22 +13,18 @@
           %li
             %a#achievement_tab_link{ href: "#achievements_tab", title: "Tasks"} Tasks
     - unless @core_tasks.empty?
-      %div#arena_tab.tab_content
+      %div#arena_tab.tab_content{style:"margin-left:12px;"}
         - if @core_tasks.select{ |t| t.status_id.nil? }.size > 0
           %p{ style: "margin: 15px 0 15px 0;" } Enter the Arena to see where you stack up!
           %p= link_to "Start", continue_section_path(@current_section), class: "button button-actionable"  
         - else
-          %table.table
-            - @core_tasks.each do |t|
-              - next if t.status_id.nil? || t.status_id == Answer::INCOMPLETE.to_s
-              %tr
-                %td
-                  %p= t.question
-                %td.question_status
-                  - if t.status_id == Answer::CORRECT.to_s
-                    %span.label.label-success Correct
-                  - else
-                    %span.label.label-important Incorrect
+          %p You got <strong>X out of Y</strong> questions right, and scored <strong>@section.points_earned(current_user) points</strong> in this section!
+          - if @achievement_tasks.count == 0 and @challenge_tasks.count > 0
+            %p Continue on to the <strong>Creative Reponse</strong> tab to earn additional points and level-up.
+          - if @challenge_tasks.count == 0 and @achievement_tasks.count > 0
+            %p Continue on to the <strong>Tasks</strong> tab to earn additional points and level-up.
+          - if @challenge_tasks.count > 0 and @achievement_tasks.count > 0
+            %p Continue on to the <strong>Creative Reponse</strong> and <strong>Tasks</strong> tabs to earn additional points and level-up.          
     - unless @challenge_tasks.empty?
       %div#questions_tab.tab_content{ style: "" }
         %div{style:"background-color:#C0E6C0; width:600px; height:80px; margin-left: auto; margin-right: auto; padding:4px 10px 10px 10px; text-align: left; margin-bottom: 12px;"}
