--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -38,7 +38,7 @@
                     %div.graynub{ style: "top:-17px; left: 75px; margin:0; "}
                     %div{ style: "padding: 3px 0px; margin:0;"}
                       %ul.profile_dropdown{ style: "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
-                        %li= link_to "Delete Submission", retract_submission_path(r.id), remote: true, confirm: "Are you sure you want to delete your submission?", style: "padding: 0; color: inherit; text-shadow: none;", class: "retract_link"
+                        %li= link_to "Delete Submission", retract_submission_path(r.id), remote: true, confirm: "Are you sure you want to delete your submission?", style: "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;", class: "retract_link"
             - else
               = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "btn-info" : "")) do
                 %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }            
