edits to create_cr_unlock.html email

--- a/app/views/mailer/create_cr_unlock.html.haml
+++ b/app/views/mailer/create_cr_unlock.html.haml
@@ -13,10 +13,10 @@
         %td{:style => "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
           %span{:style => "font-size:24px;"} Congratulations!
           %br/
-          %span{:style => "font-size:14px; font-style:italic;"} You've unlocked a new right...
+          %span{:style => "font-size:14px; font-style:italic;"} You've unlocked a new privilege...
           %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
             %p{:style => "font-size:12px;"}
-              After successfully completing your first Creative Response, you've unlocked the ability to create your own CR's. 
+              After making solid progress in @challenge_name, you've unlocked the ability to create your own CR's. 
               The CR's you post will be immediately available to the MetaBright community.    
             %p{:style => "font-size:12px;"} 
               You can make CR's by clicking the new "Create a CR" button on your stream.
