--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -1,15 +1,15 @@
-.aboutcontainer
+.aboutcontainer{style:"width:703px;"}
   .aboutbox
     .aboutheader
       %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney+100x150.png"}
         %span MetaBright Challenges
     %hr{:style => "margin:0"}
-      .aboutbody
+      .aboutbody{style:"padding-left:2px;"}
         - @personas.each do |persona|
           %h4= persona.name
-          %div{style: "margin-bottom:5px;"}
+          %div
             - persona.paths.each do |path|
-              %div.mosaic-block.bar2{style: "margin-bottom:10px;"}
+              %div.mosaic-block.bar2.challengepagechallenge{style: "margin-bottom:10px;"}
                 = link_to challenge_path(path.permalink), class: "mosaic-overlay", title: "#{path.name}" do
                   %div.details
                     %h4{style: "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} #{truncate(path.name,length: 17, separator: ' ')}
