--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -16,7 +16,7 @@
       %div.rightofbigheaderimage{ style: "width:81%;" }
         %div#topboxcontent
           - if current_user
-            %div.button.button-actionable{ style: "float: right;"} Continue Level #{@enrollment.level}
+            %div.button.button-actionable{ style: "float: right;"} Continue Level #{@enrollment.level} »
           %div{ style: "width: 550px; margin-top: 10px;" }
             %h1= @path.name
             - if current_user
