--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -18,7 +18,9 @@
           %p{ style: "margin: 15px 0 15px 0;" } Enter the Arena to see where you stack up!
           %p= link_to "Start", continue_section_path(@current_section), class: "button button-actionable"  
         - else
-          %p You got <strong>X out of Y</strong> questions right, and scored <strong>@section.points_earned(current_user) points</strong> in this section!
+          - correct_tasks = @core_tasks.select{ |t| t.status_id.to_i == Answer::CORRECT }.size
+          - incorrect_tasks = @core_tasks.select{ |t| t.status_id.to_i == Answer::INCORRECT }.size
+          %p You got <strong>#{correct_tasks} out of #{correct_tasks + incorrect_tasks}</strong> questions right, and scored <strong>#{@current_section.points_earned(current_user)} points</strong> in this section!
           - if @achievement_tasks.count == 0 and @challenge_tasks.count > 0
             %p Continue on to the <strong>Creative Reponse</strong> tab to earn additional points and level-up.
           - if @challenge_tasks.count == 0 and @achievement_tasks.count > 0
