completed cr page actually complete now

--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -77,7 +77,7 @@
             $('#leaderboard_pop').popover({
               trigger: 'manual',
               placement:'left',  
-              template: '<div class="popover"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div></div></div>',
+              template: '<div class="popover"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div><div class="popover-close"></div></div></div>',
               content: 'The people who have dominated this Challenge appear here.',            
               });
             $('#leaderboard_pop').popover('show');
