--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -20,14 +20,14 @@
       $('#points_pop').popover({
         trigger: 'manual',
         placement:'right',  
-        template: '<div class="popover"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div></div></div>',
+        template: '<div class="popover"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div><a class="popover-close"></a></div></div>',
         content: 'Vote on answers you like so they earn more points.',            
         });
       $('#points_pop').popover('show');
       $('#CR_pop').popover({
         trigger: 'manual',
         placement:'left',  
-        template: '<div class="popover"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div></div></div>',
+        template: '<div class="popover"><div class="arrow"></div><div class="popover-inner"><div class="popover-content"><p></p></div><a class="popover-close"></a></div></div>',
         content: 'This is an answer to the above Creative Response question.',            
         });
       $('#CR_pop').popover('show');
